controller/etc/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ⚠️
  labels:
    app.kubernetes.io/name: clair
    app.kubernetes.io/managed-by: clair-operator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: clair
      app.kubernetes.io/managed-by: clair-operator
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clair
        app.kubernetes.io/managed-by: clair-operator
    spec:
      revisionHistoryLimit: 3
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 65532
      shareProcessNamespace: true
      volumes: []
      containers:
      - name: clair
        image: ⚠️
        ports:
        - name: api
          containerPort: 6060
        - name: introspection
          containerPort: 8089
        volumeMounts: []
        workingDir: /run/clair
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: "1"
        startupProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: introspection
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: introspection
          initialDelaySeconds: 5
          periodSeconds: 10
